# markdown-related

./: README.md  index.html  package-lock.json  package.json
docs/: macos-automation-regression.md  macos-signing-notarization.md  tech-plan.md
scripts/: e2e-android-regression.mjs  e2e-macos-regression.mjs  install-mac-app.sh  release-macos-notarized.sh
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: core.rs  lib.rs
